Animation fixes
"Display:none;" added in several places so the animation doesn't overlap any other element of the site - consequently "display:block;" is also added so animation still displays correctly

--- a/style.css
+++ b/style.css
@@ -701,7 +701,7 @@ body {
 
 .scene-container {
     position: fixed;
-    top: 0;
+    top: 0%;
 }
 
 /* Positioning all the elements of the scene */
